cfn_benchmark/cfn_templates/aws-samples__AWS_Serverless_Resiliency_Samples/multi-region-authorizer/front-end/frontend-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: Front-end for Multi-region Authorizer application

Globals:
  Function:
    Timeout: 30

Parameters:
  EnvironmentName:
    Type: String
    Description: Environment name (e.g., dev, prod)
    Default: dev
  DesiredTaskCount:
    Type: Number
    Description: The number of Fargate tasks to run
    Default: 1
  ContainerPort:
    Type: Number
    Description: The port your container exposes
    Default: 80
  ImageName:
    Type: String
    Description: The name to use when building the image
    Default: multi-region-frontend # Use the same image name specified in deploy.sh
  DomainName:
    Type: String
    Description: The domain name you want to use (e.g., noservers.online )
    Default: << frontend.example.com >> # You could use a subdomain of the registered domain
  SubDomainName:
    Type: String
    Description: The subdomain name you want to use (e.g., www)
    Default: www
  HostedZoneId:
    Type: String
    Description: The Route53 Hosted Zone ID
    Default: << ROUTE 53 HOSTED ZONE ID >>
  AcmCertificateArn:
    Type: String
    Description: The ARN of the ACM Certificate
    Default: << ARN OF THE ACM CERTIFICATE >>

Conditions:
  CreateHttpsListener: !Not [!Equals ["", !Ref AcmCertificateArn]]

Resources:
  # ------------------------------------------------------------------
  # VPC Resources
  # ------------------------------------------------------------------
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "vpc-${EnvironmentName}"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "igw-${EnvironmentName}"

  VPCToInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub "public-subnet-1-${EnvironmentName}"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub "public-subnet-2-${EnvironmentName}"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "public-route-table-${EnvironmentName}"

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        SubnetId: !Ref PublicSubnet1
        RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        SubnetId: !Ref PublicSubnet2
        RouteTableId: !Ref PublicRouteTable
  # ------------------------------------------------------------------
  # IAM Roles & Policies
  # ------------------------------------------------------------------
  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'

  ECSTaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      Policies:
        - PolicyName: ECSTaskAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - 'logs:CreateLogGroup'
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                Resource: '*'

  # ------------------------------------------------------------------
  # ECS Cluster
  # ------------------------------------------------------------------
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub "ecs-${EnvironmentName}-cluster"

  # ------------------------------------------------------------------
  # ECS Task Definition
  # ------------------------------------------------------------------
  ECSTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      RequiresCompatibilities:
        - FARGATE
      Cpu: 256 # 0.25 vCPU
      Memory: 512 # 0.5 GB
      NetworkMode: awsvpc
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      TaskRoleArn: !GetAtt ECSTaskRole.Arn
      RuntimePlatform:
        CpuArchitecture: X86_64
      Family: !Sub "ecs-${EnvironmentName}-task-def"
      ContainerDefinitions:
        - Name: !Sub "${EnvironmentName}-app-container"
          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ImageName}:latest"
          PortMappings:
            - ContainerPort: !Ref ContainerPort
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref AWSLogsGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: !Sub "${EnvironmentName}-app"
              mode: "non-blocking"

  # ------------------------------------------------------------------
  # ECS Service
  # ------------------------------------------------------------------
  ECSService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: !Ref DesiredTaskCount
      TaskDefinition: !Ref ECSTaskDefinition
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref PublicSubnet1
            - !Ref PublicSubnet2
          SecurityGroups:
            - !Ref ContainerSecurityGroup
      LoadBalancers:
        - ContainerName: !Sub "${EnvironmentName}-app-container"
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref ApplicationLoadBalancerTargetGroup

    DependsOn:
      - ApplicationLoadBalancerListener
      - ApplicationLoadBalancerTargetGroup

  # ------------------------------------------------------------------
  # Security Group
  # ------------------------------------------------------------------
  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow HTTP traffic from the load balancer and outbound to ECR"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref ContainerPort
          ToPort: !Ref ContainerPort
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
      SecurityGroupEgress:
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
           CidrIp: 0.0.0.0/0
         - IpProtocol: -1
           FromPort: 0
           ToPort: 65535
           CidrIp: 0.0.0.0/0

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow HTTP/HTTPS access"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0

  # ------------------------------------------------------------------
  # Load Balancer Resources
  # ------------------------------------------------------------------
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "alb-${EnvironmentName}"
      Type: application
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Scheme: internet-facing

  ApplicationLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ApplicationLoadBalancerTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  ApplicationLoadBalancerHTTPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: CreateHttpsListener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ApplicationLoadBalancerTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref AcmCertificateArn

  ApplicationLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Name: !Sub "tg-${EnvironmentName}"
      Port: !Ref ContainerPort
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VPC

  # ------------------------------------------------------------------
  # CloudWatch Logs
  # ------------------------------------------------------------------
  AWSLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/ecs/${EnvironmentName}-app"
      RetentionInDays: 7

  # ------------------------------------------------------------------
  # Route 53 Records
  # ------------------------------------------------------------------
  AliasRecordSet:
      Type: 'AWS::Route53::RecordSet'
      Properties:
        AliasTarget:
          DNSName: !GetAtt ApplicationLoadBalancer.DNSName
          HostedZoneId: !GetAtt ApplicationLoadBalancer.CanonicalHostedZoneID
        HostedZoneId: !Ref HostedZoneId
        Name: !Sub "${SubDomainName}.${DomainName}."
        Type: A

Outputs:
  LoadBalancerDNS:
    Description: "The DNS name of the load balancer"
    Value: !GetAtt ApplicationLoadBalancer.DNSName
  WebsiteURL:
    Description: "The URL to access the application using the custom domain"
    Value: !Sub "http://${SubDomainName}.${DomainName}"
  WebsiteURLHttps:
    Description: "The URL to access the application using the custom domain (HTTPS)"
    Value: !Sub "https://${SubDomainName}.${DomainName}"
    Condition: CreateHttpsListener
